aplico cambios generales para hacerlo funcionar

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,6 @@
       <h1 class="title mt-3">Lista de tareas - API para el IUPA</h1>
     </nav>
 
-    <!-- Formulario de login -->
     <nav class="panel" id="login-form">
       <p class="panel-heading">Login</p>
 
@@ -52,14 +51,14 @@
               id="user_name"
               placeholder="Nombre de usuario"
             />
-            <!-- <p id="inputNameHelp" class="help is-hidden is-danger"></p> -->
+            <!-- <p id="input_username_help" class="help is-hidden is-danger"></p> -->
             <label class="label mt-4" for="password">Contraseña: </label>
             <input
               type="password"
               class="input is-primary is-small"
               id="password"
             />
-            <!-- <p id="inputAgeHelp" class="help is-hidden is-danger"></p> -->
+            <!-- <p id="input_password_help" class="help is-hidden is-danger"></p> -->
             <button
               type="button"
               class="button is-small mt-5 is-success"
@@ -74,25 +73,23 @@
 
     <nav class="panel p-3" id="contentUser"></nav>
 
-    <!-- Panel para listar tareas del usuario -->
-    <nav class="panel">
-      <p class="panel-heading">Listado de tareas</p>
+    <nav class="panel" id="panel_tareas">
+      <p class="panel-heading">Listado de tareas para el usuario</p>
       <div class="panel-block is-flex-wrap-wrap" id="contentTable">
         <div class="columns w-1000">
-          <div class="column tituloTarea">Título</div>
-          <div class="column estadoTarea">Estado</div>
-          <div class="column creadoTarea">Creada el</div>
+          <div class="column txtName">Titulo</div>
+          <div class="column nmbAge">Estado</div>
+          <div class="column txtUsername">Creada el</div>
           <div class="column"></div>
         </div>
       </div>
     </nav>
 
-    <!-- Template para mostrar contenido dinámicamente -->
     <template id="contentRow">
       <div class="columns row w-100">
-        <div class="column tituloTarea pt-2"></div>
-        <div class="column estadoTarea pt-2"></div>
-        <div class="column creadoTarea pt-2"></div>
+        <div class="column txtName pt-2"></div>
+        <div class="column nmbAge pt-2"></div>
+        <div class="column txtUsername pt-2"></div>
         <div class="column has-text-right">
           <button class="button is-info mr-1 is-small btnUpdate">Editar</button>
           <button class="button is-danger is-small btnDelete">Eliminar</button>
@@ -100,7 +97,6 @@
       </div>
     </template>
 
-    <!-- Template para mostrar datos del usuario logueado -->
     <template id="contentUserRow">
       <div class="block usrInfo"></div>
       <button
