--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bulma.min.css" />
+    <script src="https://kit.fontawesome.com/2cfb16db7a.js" crossorigin="anonymous"></script>
+
     <title>
       Trabajo práctico integrador - API para listar tareas por usuario
     </title>
