--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <div class="l-form">
      
     <nav class="panel" id="login-form">
-      <h1 class="title mt-3">Lista de tareas - API para el IUPA</h1>
+      <h1 class="title mt-3 title">Lista de tareas - API para el IUPA</h1>
       <p class="panel-heading">Login</p>
 
       <div class="panel-block">
